--- a/Project.toml
+++ b/Project.toml
@@ -1,14 +1,14 @@
 name = "POMDPTesting"
 uuid = "92e6a534-49c2-5324-9027-86e3c861ab81"
 repo = "https://github.com/JuliaPOMDP/POMDPTesting.jl"
-version = "0.2.2"
+version = "0.2.3"
 
 [deps]
 POMDPs = "a93abf59-7444-517b-a68a-c42f96afdd7d"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
-POMDPs = "0.7.3, 0.8, 0.9"
+POMDPs = "0.9"
 julia = "1"
 
 [extras]
