--- a/Project.toml
+++ b/Project.toml
@@ -1,14 +1,18 @@
 name = "POMDPTesting"
 uuid = "92e6a534-49c2-5324-9027-86e3c861ab81"
 repo = "https://github.com/JuliaPOMDP/POMDPTesting.jl"
-version = "0.2.5"
+version = "0.2.6"
 
 [deps]
+POMDPTools = "7588e00f-9cae-40de-98dc-e0c70c48cdd7"
 POMDPs = "a93abf59-7444-517b-a68a-c42f96afdd7d"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 
 [compat]
+POMDPTools = "0.1"
 POMDPs = "0.9"
+Reexport = "1"
 julia = "1"
 
 [extras]
